--- a/login/templates/base.html
+++ b/login/templates/base.html
@@ -53,6 +53,13 @@
                 {% endblock no_heading %}
                 <h1>Bienvenidos al Centro de Servicio</h1>
             </section>
+            <section>
+                <h5>Para Dirigirte a Oinc Da Click En El Logo</h5>
+                <a href="http://181.49.60.154:8086/Vistas/Privado/Login.aspx">
+                <img src="{%static '/images/logo_OINCC.png' %}" alt="Logo oinc"
+              height="100" width="100">
+            </a>
+            </section>
             {% endblock %}
 
             {% block content_outer %}
