--- a/login/templates/base.html
+++ b/login/templates/base.html
@@ -16,6 +16,20 @@
 
     {% block stylesheets %}
     {% include 'adminlte/lib/_styles.html' %}
+    <style type="text/css">
+		.btn-circle.btn-xl {
+			width: 130px;
+			height: 130px;
+			padding: 13px 18px;
+			border-radius: 100px;
+			font-size: 15px;
+			text-align: center;
+            margin-left: 50px;
+		}
+        .btn-secondary1{
+            background-color: #d3caca;
+        }
+	</style>
     {% endblock %}
 
     {% block extra_head %}{% endblock %}
@@ -51,15 +65,15 @@
                 {# Breadcrumb implementation left to developers #}
                 {% endblock %}
                 {% endblock no_heading %}
-                <h1>Bienvenidos al Centro de Servicio</h1>
+                <h1>Bienvenidos al Centro de Servicios</h1>
             </section>
             <section>
-                <h5>Para Dirigirte a Oinc Da Click En El Logo</h5>
-                <a href="http://181.49.60.154:8086/Vistas/Privado/Login.aspx">
-                <img src="{%static '/images/logo_OINCC.png' %}" alt="Logo oinc"
-              height="100" width="100">
-            </a>
+                <h5>Para dirigirte a Oinc, haz clic en el logo:</h5>
+                <button class="btn btn-secondary1 btn-circle btn-xl" onclick="window.location.href='http://181.49.60.154:8086/Vistas/Privado/Login.aspx'" style="display: flex; justify-content: center; align-items: center; width: 150px; height: 150px; border-radius: 50%;">
+                    <img src="{% static '/images/logo_OINCC.png' %}" alt="Logo oinc" height="125" width="125">
+                </button>
             </section>
+            
             {% endblock %}
 
             {% block content_outer %}
@@ -94,7 +108,7 @@
     <script src="{% static 'custom.js' %}"></script>
     {% endblock %}
 
-   
+
 </body>
 
 </html>
