--- a/login/templates/cadenaabastecimiento.html
+++ b/login/templates/cadenaabastecimiento.html
@@ -4,7 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Proveeduria</title>
+  <title>Cadena de abastecimiento</title>
+  <style>
+    .btn-info1 {
+      background-color: #CFCCCC;
+    }
+  </style>
 </head>
 
 <body>
@@ -26,9 +31,9 @@
           <form method="post" action="{% url 'cargar_excel_cadenaabastecimiento' %}" enctype="multipart/form-data">
             {% csrf_token %}
             <label for="archivo_excel">Selecciona un archivo Excel:</label>
-            <input class="btn btn-info" type="file" name="archivo_excel" accept=".xlsx, .xls">
+            <input class="btn btn-info1" type="file" name="archivo_excel" accept=".xlsx, .xls">
             <br>
-            <button class="btn btn-success" type="submit">Cargar Datos</button>
+            <button class="btn bg-gradient-primary " type="submit">Cargar Datos</button>
           </form>
         </div>
       </div>
@@ -54,9 +59,9 @@
           <form method="post" action="{% url 'cargar_excel_cerdosbeneficiados' %}" enctype="multipart/form-data">
             {% csrf_token %}
             <label for="archivo_excel">Selecciona un archivo Excel:</label>
-            <input class="btn btn-info" type="file" name="archivo_excel" accept=".xlsx, .xls">
+            <input class="btn btn-info1" type="file" name="archivo_excel" accept=".xlsx, .xls">
             <br>
-            <button class="btn btn-success" type="submit">Cargar Datos</button>
+            <button class="btn bg-gradient-primary " type="submit">Cargar Datos</button>
           </form>
         </div>
       </div>
@@ -81,9 +86,9 @@
           <form method="post" action="{% url 'cargar_excel_compaplanta' %}" enctype="multipart/form-data">
             {% csrf_token %}
             <label for="archivo_excel">Selecciona un archivo Excel:</label>
-            <input class="btn btn-info" type="file" name="archivo_excel" accept=".xlsx, .xls">
+            <input class="btn btn-info1" type="file" name="archivo_excel" accept=".xlsx, .xls">
             <br>
-            <button class="btn btn-success" type="submit">Cargar Datos</button>
+            <button class="btn bg-gradient-primary " type="submit">Cargar Datos</button>
           </form>
         </div>
       </div>
@@ -108,9 +113,9 @@
           <form method="post" action="{% url 'cargar_excel_costodespos' %}" enctype="multipart/form-data">
             {% csrf_token %}
             <label for="archivo_excel">Selecciona un archivo Excel:</label>
-            <input class="btn btn-info" type="file" name="archivo_excel" accept=".xlsx, .xls">
+            <input class="btn btn-info1" type="file" name="archivo_excel" accept=".xlsx, .xls">
             <br>
-            <button class="btn btn-success" type="submit">Cargar Datos</button>
+            <button class="btn bg-gradient-primary " type="submit">Cargar Datos</button>
           </form>
         </div>
       </div>
@@ -135,9 +140,9 @@
           <form method="post" action="{% url 'cargar_excel_kgbeneficio' %}" enctype="multipart/form-data">
             {% csrf_token %}
             <label for="archivo_excel">Selecciona un archivo Excel:</label>
-            <input class="btn btn-info" type="file" name="archivo_excel" accept=".xlsx, .xls">
+            <input class="btn btn-info1" type="file" name="archivo_excel" accept=".xlsx, .xls">
             <br>
-            <button class="btn btn-success" type="submit">Cargar Datos</button>
+            <button class="btn bg-gradient-primary " type="submit">Cargar Datos</button>
           </form>
         </div>
       </div>
@@ -162,9 +167,9 @@
           <form method="post" action="{% url 'cargar_excel_kgdesposte' %}" enctype="multipart/form-data">
             {% csrf_token %}
             <label for="archivo_excel">Selecciona un archivo Excel:</label>
-            <input class="btn btn-info" type="file" name="archivo_excel" accept=".xlsx, .xls">
+            <input class="btn btn-info1" type="file" name="archivo_excel" accept=".xlsx, .xls">
             <br>
-            <button class="btn btn-success" type="submit">Cargar Datos</button>
+            <button class="btn bg-gradient-primary " type="submit">Cargar Datos</button>
           </form>
         </div>
       </div>
@@ -189,9 +194,9 @@
           <form method="post" action="{% url 'cargar_excel_particortes' %}" enctype="multipart/form-data">
             {% csrf_token %}
             <label for="archivo_excel">Selecciona un archivo Excel:</label>
-            <input class="btn btn-info" type="file" name="archivo_excel" accept=".xlsx, .xls">
+            <input class="btn btn-info1" type="file" name="archivo_excel" accept=".xlsx, .xls">
             <br>
-            <button class="btn btn-success" type="submit">Cargar Datos</button>
+            <button class="btn bg-gradient-primary " type="submit">Cargar Datos</button>
           </form>
         </div>
       </div>
@@ -216,9 +221,9 @@
           <form method="post" action="{% url 'cargar_excel_toneladasimport' %}" enctype="multipart/form-data">
             {% csrf_token %}
             <label for="archivo_excel">Selecciona un archivo Excel:</label>
-            <input class="btn btn-info" type="file" name="archivo_excel" accept=".xlsx, .xls">
+            <input class="btn btn-info1" type="file" name="archivo_excel" accept=".xlsx, .xls">
             <br>
-            <button class="btn btn-success" type="submit">Cargar Datos</button>
+            <button class="btn bg-gradient-primary " type="submit">Cargar Datos</button>
           </form>
         </div>
       </div>
