--- a/login/templates/gestioncomercial.html
+++ b/login/templates/gestioncomercial.html
@@ -59,9 +59,9 @@
           <form method="post" action="{% url 'cargar_excel_ventas' %}" enctype="multipart/form-data">
             {% csrf_token %}
             <label for="archivo_excel">Selecciona un archivo Excel:</label>
-            <input class="btn btn-info" type="file" name="archivo_excel" accept=".xlsx, .xls">
+            <input class="btn btn-info1" type="file" name="archivo_excel" accept=".xlsx, .xls">
             <br>
-            <button class="btn btn-success" type="submit">Cargar Datos</button>
+            <button class="btn bg-gradient-primary " type="submit">Cargar Datos</button>
           </form>
         </div>
       </div>
