--- a/login/templates/report_gcomercial.html
+++ b/login/templates/report_gcomercial.html
@@ -1,18 +1,32 @@
+{% load adminlte_helpers i18n %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>comercial</title>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
+
+
+    {% block meta %}
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    {% endblock %}
+
+    {% block stylesheets %}
+    {% include 'adminlte/lib/_styles.html' %}
     <style type="text/css">
         .btn-circle.btn-xl {
-            width: 100px;
-            height: 100px;
+            width: 130px;
+            height: 130px;
             padding: 13px 18px;
-            border-radius: 60px;
+            border-radius: 100px;
             font-size: 15px;
             text-align: center;
+            margin-left: 50px;
         }
 
         .btn-repor {
@@ -20,150 +34,173 @@
             color: aliceblue;
         }
     </style>
+    {% endblock %}
+
+    {% block extra_head %}{% endblock %}
+</head>
 </head>
 
-<body>
-    <section>
-        <div>
-            <button class="btn btn-repor btn-circle btn-xl">Reporte Clientes Activos </button>
-            <button class="btn btn-repor btn-circle btn-xl">Reporte Ventas</button>
-        </div>
-    </section>
-    <section>
-        <table class="table table-bordered table-responsive table-hover text-uppercase">
-            <thead>
-                <tr>
-                    <th>ds</th>
-                    <th>df</th>
-                    <th>fd</th>
-                    <th>fd</th>
-                    <th>fd</th>
-                </tr>
-            <tbody>
-                <tr>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>df</td>
-                </tr>
-                <tr>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>df</td>
-                </tr>
-                <tr>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>df</td>
-                </tr>
-                <tr>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>df</td>
-                </tr>
-                <tr>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>df</td>
-                </tr>
-                <tr>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>df</td>
-                </tr>
-                <tr>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>df</td>
-                </tr>
-                <tr>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>df</td>
-                </tr>
-                <tr>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>df</td>
-                </tr>
-                <tr>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>df</td>
-                </tr>
-                <tr>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>df</td>
-                </tr>
-                <tr>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>df</td>
-                </tr>
-                <tr>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>df</td>
-                </tr>
-                <tr>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>df</td>
-                </tr>
-                <tr>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>df</td>
-                </tr>
-                <tr>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>df</td>
-                </tr>
-                <tr>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>fd</td>
-                    <td>df</td>
-                </tr>
-                
-            </tbody>
-            </thead>
-        </table>
-    </section>
+<body class="hold-transition sidebar-mini {% block body_class %}{% block bodyclass %}{% endblock %}{% endblock %}">
+    <div class="wrapper">
+        {% block nav_header %}
+        {% include '_main_header.html' %}
+        {% endblock %}
+
+        {% block nav_sidebar %}
+        {% include '_main_sidebar.html' %}
+        {% endblock %}
+
+        {% block content_wrapper %}
+        <div class="content-wrapper">
+            {% block content_header %}
+            <section class="content-header">
+                {% block no_heading %}
+                <h1>
+                    {% block page_name %}{% endblock %}
+                    <div class="header-actions">
+                        {% block page_actions %}{% endblock %}
+                    </div>
+                    {% block no_description %}
+                    <small>{% block page_description %}{% endblock %}</small>
+                    {% endblock %}
+                </h1>
+                {% block breadcrumbs %}
+                {# Breadcrumb implementation left to developers #}
+                {% endblock %}
+                {% endblock no_heading %}
+                <h1>Bienvenidos al Centro de Servicios</h1>
+            </section>
+            {% endblock %}{% endblock %}
+            <section>
+                <div>
+                    <button id="btn_clientes" class="btn btn-repor btn-circle btn-xl" onclick="mostrarClientes()">Reporte Clientes Activos</button>
+                    <button id="btn_ventas" class="btn btn-repor btn-circle btn-xl" onclick="mostrarVentas()">Reporte Ventas</button>
+                </div>
+            </section>
+
+            <!-- Contenido principal -->
+            <div class="contener">
+                <!-- Sección de tabla -->
+                <section class="content">
+                    <div class="card" id="clientes_table" style="display:none;">
+                        <div class="card-header">
+                            <h3 class="card-title">REPORTE DE CLIENTES ACTIVOS</h3>
+                        </div>
+                        <div class="card-body">
+                            <table id="tabla_clientesact" class="table table-bordered table-hover " >
+                                <thead>
+
+                                    <tr>
+                                        <th>Fecha Corte</th>
+                                        <th>Cantidad Clientes</th>
+                                        <th>Zona Cliente</th>
+                                        <th>Kg Facturado</th>
+                                        <th>Dinero Aportado</th>
+                                        <th>Estado Cliente</th>
+                                        <!-- Agrega más columnas según sea necesario -->
+                                    </tr>
+                                </thead>
+                                <tbody>
+
+                                    {% for cliente in clientes_act %}
+                                    <tr>
+                                        <td>{{ cliente.0 }}</td>
+                                        <td>{{ cliente.1 }}</td>
+                                        <td>{{ cliente.2 }}</td>
+                                        <td>{{ cliente.3 }}</td>
+                                        <td>{{ cliente.4 }}</td>
+                                        <td>{{ cliente.5 }}</td>
+                                    </tr>
+                                    {% endfor %}
+
+
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </section>
+                <!-- /.content -->
+            </div>
+            <div class="contener">
+                <!-- Sección de tabla -->
+                <section class="content">
+                    <div class="card"  id="ventas_table" style="display:none;">
+                        <div class="card-header">
+                            <h2 class="card-title" >REPORTE DE VENTAS</h2>
+                        </div>
+                        <div class="card-body">
+                            <table id="tabla_ventas" class="table table-bordered table-hover">
+                                <thead>
+                                    <tr>
+                                        <th>Fecha Corte</th>
+                                        <th>Linea Negocio</th>
+                                        <th>Presupuesto Unidades</th>
+                                        <th>Presupuesto KG</th>
+                                        <th>Unidades Vendidas</th>
+                                        <th>Kg vendido</th>
+                                        <th>Valor Venta</th>
+                                        <th>Presupuesto Venta</th>
+                                        <!-- Agrega más columnas según sea necesario -->
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for venta in repventas %}
+                                    <tr>
+                                        <td>{{venta.0}}</td>
+                                        <td>{{venta.1}}</td>
+                                        <td>{{venta.2}}</td>
+                                        <td>{{venta.3}}</td>
+                                        <td>{{venta.4}}</td>
+                                        <td>{{venta.5}}</td>
+                                        <td>{{venta.6}}</td>
+                                        <td>{{venta.7}}</td>
+                                        <!-- Agrega más celdas según sea necesario -->
+                                    </tr>
+                                    {% endfor %}
+
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </section>
+                <!-- /.content -->
+            </div>
+            <!-- /.content-wrapper -->
+
+            <!-- Pie de página -->
+            <!-- Agrega aquí el código para el pie de página si es necesario -->
+
+
+
+
+            {% block javascript %}
+            {% include 'adminlte/lib/_scripts.html' %}
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+            <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+            <script>
+                function mostrarClientes() {
+                    document.getElementById("clientes_table").style.display = "block";
+                    document.getElementById("ventas_table").style.display = "none";
+                }
+
+                function mostrarVentas() {
+                    document.getElementById("clientes_table").style.display = "none";
+                    document.getElementById("ventas_table").style.display = "block";
+                }
+                $(document).ready(function () {
+                    $('#tabla_clientesact').DataTable();
+
+                    $("#tabla_ventas").DataTable({
+                        "responsive": true, "lengthChange": false, "autoWidth": false,
+                        "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
+                    }).buttons().container().appendTo('#tabla_ventas_wrapper .col-md-6:eq(0)');
+
+                });
+            </script>
+            <!-- script para llamar los html en el contenido -->
+            <script src="{% static 'custom.js' %}"></script>
+            {% endblock %}
+
 </body>
 
 </html>
