--- a/login/templates/report_gcomercial.html
+++ b/login/templates/report_gcomercial.html
@@ -68,13 +68,13 @@
                 {# Breadcrumb implementation left to developers #}
                 {% endblock %}
                 {% endblock no_heading %}
-                <h1>Bienvenidos al Centro de Servicios</h1>
+                <h1>Reportes Gestion Comercial</h1>
             </section>
             {% endblock %}{% endblock %}
             <section>
                 <div>
-                    <button id="btn_clientes" class="btn btn-repor btn-circle btn-xl" onclick="mostrarClientes()">Reporte Clientes Activos</button>
-                    <button id="btn_ventas" class="btn btn-repor btn-circle btn-xl" onclick="mostrarVentas()">Reporte Ventas</button>
+                    <button id="btn_clientes" class="btn btn-repor btn-lg" onclick="mostrarClientes()">Reporte Clientes Activos</button>
+                    <button id="btn_ventas" class="btn btn-repor btn-lg" onclick="mostrarVentas()">Reporte Ventas</button>
                 </div>
             </section>
 
