--- a/login/templates/gestionadminfinan.html
+++ b/login/templates/gestionadminfinan.html
@@ -70,5 +70,32 @@
       </div>
     </div>
   </div>
+   <!------------------------------------------------------- carga 3er excel  -------------------------->
+   <div class="card card-default  collapsed collapsed-card">
+    <div class="card-header bg-dark" data-card-widget="collapse">
+      <h3 class="card-title">Ingreso de Precio Canales </h3>
+
+      <div class="card-tools">
+        <button type="button" class="btn btn-tool"><i class="fas fa-minus"></i></button>
+      </div>
+    </div>
+    <!-- /.card-header -->
+    <div class="card-body">
+      <div class="row">
+        <div class="col-md-6">
+          <form method="post" action="{% url 'cargar_excel_preciocanal' %}" enctype="multipart/form-data">
+            {% csrf_token %}
+            <label for="archivo_excel">Selecciona un archivo Excel:</label>
+            <input class="btn btn-info1" type="file" name="archivo_excel" accept=".xlsx, .xls">
+            <br>
+            <button class="btn bg-gradient-primary "  type="submit">Cargar Datos</button>
+          </form>
+        </div>
+      </div>
+      <div class="card-footer">
+        Los valores ingresados aquí no pueden ser cambiados luego de ingresarlos.
+      </div>
+    </div>
+  </div>
 </body>
 </html>
